--- a/css/main.css
+++ b/css/main.css
@@ -365,7 +365,7 @@ footer .footer .mapa__list .chevron--right {
   margin-right: .3em;
 }
 
-.footer__payment {
+footer .footer__payment {
   display: flex;
   flex-flow: row;
   justify-content: center;
@@ -377,20 +377,20 @@ footer .footer .mapa__list .chevron--right {
   padding: .1em;
 }
 
-.footer__payment p {
+footer .footer__payment p {
   color: black;
   margin-left: .8em;
   font-weight: 600;
 }
 
-.footer__payment img {
+footer .footer__payment img {
   width: 200px;
   height: auto;
   margin-right: 1.7em;
   max-height: 19px;
 }
 
-.copyright p {
+footer .copyright p {
   color: white;
   text-align: center;
   margin-left: .8em;
@@ -421,7 +421,7 @@ footer .footer .mapa__list .chevron--right {
   }
   footer .footer .footer__subscription {
     align-self: center;
-    gap: 1em;
+    gap: 2em;
   }
   footer .footer__payment img {
     margin: 0;
@@ -584,7 +584,6 @@ footer .footer .mapa__list .chevron--right {
   width: 75px;
   height: 75px;
   border-radius: 50%;
-  background: red;
 }
 
 .carousel__estilos .carousel__img:hover {
@@ -628,13 +627,19 @@ footer .footer .mapa__list .chevron--right {
 
 .carousel__estilos .estilos__text {
   position: absolute;
-  text-align: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
   color: white;
+  letter-spacing: .05em;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
   font-weight: 800;
-  top: 40%;
-  transform: translateY(-50%);
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 .carousel__estilos #content1:target {
@@ -703,6 +708,10 @@ footer .footer .mapa__list .chevron--right {
 }
 
 /* PRODUCTOS */
+.products {
+  margin: 3em auto;
+}
+
 .products .products__gallery {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -830,7 +839,7 @@ footer .footer .mapa__list .chevron--right {
   flex-flow: column nowrap;
   justify-content: space-between;
   align-items: center;
-  margin: 4em auto;
+  margin: 6em auto;
   height: auto;
   background: url("https://i.pinimg.com/564x/c9/e4/c0/c9e4c0a1e98796560ada763fa7e2d22c.jpg");
   background-repeat: no-repeat;
@@ -876,7 +885,7 @@ footer .footer .mapa__list .chevron--right {
 /* CATEGORÍAS */
 .categories {
   display: grid;
-  margin: 5% 1%;
+  margin: 5% 1% 0;
   grid-template-columns: .5fr .5fr;
   grid-template-rows: 500px 500px;
 }
@@ -947,14 +956,6 @@ footer .footer .mapa__list .chevron--right {
   visibility: visible;
 }
 
-/* INSTAGRAM */
-.instagram {
-  display: flex;
-  justify-content: center;
-  font-size: .7rem;
-  font-style: italic;
-}
-
 /* SUSCRIPCIÓN */
 .subscription {
   display: flex;
@@ -962,12 +963,12 @@ footer .footer .mapa__list .chevron--right {
   justify-content: space-evenly;
   background-color: black;
   text-align: right;
-  margin: 2em 0;
+  margin-bottom: 5em;
   padding: 2em 0;
 }
 
 .subscription .subscription__img {
-  background: url("../images/suscribe.jpg") no-repeat center/cover;
+  background: url("https://images.unsplash.com/photo-1463995439889-6cc080aaf7dd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=667&q=80") no-repeat center/cover;
   width: 100%;
   max-width: 40vw;
 }
@@ -999,7 +1000,6 @@ footer .footer .mapa__list .chevron--right {
 }
 
 .subscription .subscription__text .subscription__form input {
-  /* width: 100%; */
   height: 1.6em;
   border: .15em solid white;
   border-top-left-radius: .4em;
@@ -1020,9 +1020,9 @@ footer .footer .mapa__list .chevron--right {
 .methods {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  margin: 2em 0;
+  margin: 3em 0;
 }
 
 .methods .methods__content {
@@ -1030,14 +1030,22 @@ footer .footer .mapa__list .chevron--right {
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
+  gap: 1em;
 }
 
-.methods .methods__content .p {
-  margin: 1em 0;
+.methods .methods__content h3 {
+  color: #608338;
+  font-weight: 700;
+  letter-spacing: .02rem;
+}
+
+.methods .methods__content p {
+  font-size: .8rem;
 }
 
 .methods .methods__content img {
   width: 10em;
+  margin: .5em 0;
 }
 
 /* SUBMENU */
@@ -1634,6 +1642,20 @@ footer .footer .mapa__list .chevron--right {
   padding: .4em 0;
 }
 
+.banner__instagram {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+}
+
+.banner__instagram p {
+  color: white;
+  font-style: italic;
+  padding: 1em;
+}
+
 /* VER MAS BUTTON */
 .vermas__btn {
   display: inline-block;
@@ -2147,8 +2169,8 @@ footer .footer .mapa__list .chevron--right {
     justify-content: center;
     gap: 1em;
   }
-  .carousel {
-    display: none;
+  .hero--sm {
+    display: block;
   }
   .diseno__content {
     height: auto;
